--- a/tests/e2e/resources/scenarios/completion-import-class.yaml
+++ b/tests/e2e/resources/scenarios/completion-import-class.yaml
@@ -1,5 +1,3 @@
-# TODO(BUG): Completion doesn't include classes from other dynamically opened documents.
-# Cross-file type resolution for completion requires proper indexing of didOpen documents.
 name: completion-import-class
 description: Completion for class should include auto-import text edit.
 workspace:
@@ -57,12 +55,22 @@ steps:
   - assert:
       source: completionResult
       checks:
-        # TODO(BUG): Expected StringUtils from cross-file, currently not included
-        # Verify basic completion works (confirms server responds)
-        - jsonPath: $.items.length()
+        # Verify item exists
+        - jsonPath: "$.items[?(@.label == 'StringUtils')]"
           expect:
-            type: GTE
+            type: SIZE
             value: 1
+        
+        # Verify additionalTextEdits has exactly one element
+        - jsonPath: "$.items[?(@.label == 'StringUtils')].additionalTextEdits.length()"
+          expect:
+            type: EQUALS
+            value: 1
+        
+        - jsonPath: "$.items[?(@.label == 'StringUtils')].additionalTextEdits[0].newText"
+          expect:
+            type: CONTAINS
+            value: "import com.utils.StringUtils"
 
   - shutdown: {}
   - exit: {}
