--- a/tests/e2e/resources/scenarios/diagnostics-semantic-errors.yaml
+++ b/tests/e2e/resources/scenarios/diagnostics-semantic-errors.yaml
@@ -1,5 +1,3 @@
-# TODO(BUG): Diagnostics JSONPath filter doesn't support .contains() function.
-# Also, Groovy dynamic typing may not report undefined variables as errors.
 name: diagnostics-semantic-errors
 description: Detects semantic errors like undefined variables and type mismatches.
 workspace:
@@ -31,15 +29,32 @@ steps:
           expect:
             type: MATCHES_REGEX
             value: ".*SemanticErrors\\.groovy$"
+        - jsonPath: $.diagnostics
+          expect:
+            type: NOT_EMPTY
 
   - assert:
       source: semanticDiagnostics
       checks:
-        # Verify diagnostics are returned (Groovy dynamic typing may not report all errors)
+        # Expect error for undefined variable
+        - jsonPath: "$.diagnostics[?(@.message.contains('undefinedVar'))]"
+          expect:
+            type: SIZE
+            value: 1
+        - jsonPath: "$.diagnostics[?(@.message.contains('undefinedVar'))].severity"
+          expect:
+            type: EQUALS
+            value: 1 # Error = 1
+        - jsonPath: "$.diagnostics[?(@.message.contains('undefinedVar'))].range.start.line"
+          expect:
+            type: EQUALS
+            value: 3
+          
+        # Expect error for type mismatch
         - jsonPath: $.diagnostics.length()
           expect:
             type: GTE
-            value: 0
+            value: 1
 
   - shutdown: {}
   - exit: {}
