--- a/tests/e2e/resources/scenarios/workspace-symbols.yaml
+++ b/tests/e2e/resources/scenarios/workspace-symbols.yaml
@@ -1,5 +1,3 @@
-# TODO(BUG): Workspace symbols don't include dynamically opened documents.
-# Server only indexes files from disk, not documents opened via didOpen.
 name: workspace-symbols
 description: Search for symbols across the workspace.
 workspace:
@@ -37,12 +35,40 @@ steps:
   - assert:
       source: symbolResult
       checks:
-        # TODO(BUG): Expected UniqueController, currently returns empty
-        # Dynamically opened documents are not indexed for workspace symbols
+        # Expect Controller and Method (depending on how fuzzy search works)
+        # Usually exact or prefix match
         - jsonPath: $.length()
           expect:
+            type: GTE
+            value: 1
+        
+        - jsonPath: "$[?(@.name == 'UniqueController')]"
+          expect:
+            type: SIZE
+            value: 1
+        - jsonPath: "$[?(@.name == 'UniqueController')].kind"
+          expect:
             type: EQUALS
-            value: 0
+            value: 5 # Class = 5
+
+  # Search for 'uniqueMethod'
+  - request:
+      method: workspace/symbol
+      params:
+        query: "uniqueMethod"
+      saveAs: methodSymbolResult
+
+  - assert:
+      source: methodSymbolResult
+      checks:
+        - jsonPath: "$.[?(@.name == 'uniqueMethod')]"
+          expect:
+            type: SIZE
+            value: 1
+        - jsonPath: "$.[?(@.name == 'uniqueMethod')].kind"
+          expect:
+            type: EQUALS
+            value: 6 # Method = 6
 
   - shutdown: {}
   - exit: {}
