fix(tests): apply Path B - disable failing scenarios as specs
Per @[/tests-tests-tests] workflow, disabled 6 E2E scenarios that expose missing features:

Disabled test specs (prefixed with _):
- _references-find-usages.yaml - #430
- _rename-symbol.yaml - #430
- _workspace-symbols.yaml - #431
- _completion-import-class.yaml - #431
- _hover-type-inference.yaml - #432
- _diagnostics-semantic-errors.yaml - #433

Fixes applied:
- JSONPath: .contains() → =~ regex operator
- Assertion: SIZE → EQUALS for .length() scalar values

All original assertions preserved as specification of expected LSP behavior.

--- a/tests/e2e/resources/scenarios/_completion-import-class.yaml
+++ b/tests/e2e/resources/scenarios/_completion-import-class.yaml
@@ -1,3 +1,5 @@
+# TODO(DEFERRED): #431 - Test disabled. Cross-file completion not working.
+# See: https://github.com/albertocavalcante/groovy-devtools/issues/431
 name: completion-import-class
 description: Completion for class should include auto-import text edit.
 workspace:
