--- a/tests/e2e/resources/scenarios/_diagnostics-semantic-errors.yaml
+++ b/tests/e2e/resources/scenarios/_diagnostics-semantic-errors.yaml
@@ -1,3 +1,5 @@
+# TODO(DEFERRED): #433 - Test disabled. Semantic diagnostics need @TypeChecked.
+# See: https://github.com/albertocavalcante/groovy-devtools/issues/433
 name: diagnostics-semantic-errors
 description: Detects semantic errors like undefined variables and type mismatches.
 workspace:
@@ -37,15 +39,15 @@ steps:
       source: semanticDiagnostics
       checks:
         # Expect error for undefined variable
-        - jsonPath: "$.diagnostics[?(@.message.contains('undefinedVar'))]"
+        - jsonPath: "$.diagnostics[?(@.message =~ '.*undefinedVar.*')]"
           expect:
             type: SIZE
             value: 1
-        - jsonPath: "$.diagnostics[?(@.message.contains('undefinedVar'))].severity"
+        - jsonPath: "$.diagnostics[?(@.message =~ '.*undefinedVar.*')].severity"
           expect:
             type: EQUALS
             value: 1 # Error = 1
-        - jsonPath: "$.diagnostics[?(@.message.contains('undefinedVar'))].range.start.line"
+        - jsonPath: "$.diagnostics[?(@.message =~ '.*undefinedVar.*')].range.start.line"
           expect:
             type: EQUALS
             value: 3
