--- a/tests/e2e/resources/scenarios/definition-method-call.yaml
+++ b/tests/e2e/resources/scenarios/definition-method-call.yaml
@@ -50,7 +50,7 @@ steps:
       checks:
         - jsonPath: $.items.length()
           expect:
-            type: SIZE
+            type: EQUALS
             value: 1
         - jsonPath: $.items[0].uri
           expect:
