--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -423,8 +423,23 @@ jobs:
       - name: Verify JAR
         if: (matrix.os == 'ubuntu-24.04' && matrix.java == 17) || matrix.os == 'self-hosted'
         run: |-
+          set -euo pipefail
+          JAR_PATH=$(find groovy-lsp/build/libs -maxdepth 1 -name 'groovy-lsp-*-all.jar' -print -quit)
+          if [[ -z "$JAR_PATH" ]]; then
+            echo "Shadow JAR not found; building..."
+            args=(:groovy-lsp:shadowJar --parallel --build-cache --stacktrace)
+            if [[ -n "${GRADLE_SCAN_FLAG}" ]]; then
+              args+=("${GRADLE_SCAN_FLAG}")
+            fi
+            ./gradlew "${args[@]}"
+            JAR_PATH=$(find groovy-lsp/build/libs -maxdepth 1 -name 'groovy-lsp-*-all.jar' -print -quit)
+          fi
+          if [[ -z "$JAR_PATH" ]]; then
+            echo "::error::Shadow JAR not found in groovy-lsp/build/libs"
+            exit 1
+          fi
           echo "Testing JAR with --help flag..."
-          java -jar groovy-lsp/build/libs/groovy-lsp-*-all.jar --help
+          java -jar "$JAR_PATH" --help
 
       - name: Upload JAR artifact
         if: (matrix.os == 'ubuntu-24.04' && matrix.java == 17) || matrix.os == 'self-hosted'
