--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -424,12 +424,18 @@ jobs:
         if: (matrix.os == 'ubuntu-24.04' && matrix.java == 17) || matrix.os == 'self-hosted'
         run: |-
           set -euo pipefail
-          args=(:groovy-lsp:shadowJar --parallel --build-cache --stacktrace)
-          if [[ -n "${GRADLE_SCAN_FLAG}" ]]; then
-            args+=("${GRADLE_SCAN_FLAG}")
+          shopt -s nullglob
+          jar_files=(groovy-lsp/build/libs/groovy-lsp-*-all.jar)
+          if [[ ${#jar_files[@]} -eq 0 ]]; then
+            echo "Shadow JAR not found; building..."
+            args=(:groovy-lsp:shadowJar --parallel --build-cache --stacktrace)
+            if [[ -n "${GRADLE_SCAN_FLAG}" ]]; then
+              args+=("${GRADLE_SCAN_FLAG}")
+            fi
+            ./gradlew "${args[@]}"
+            jar_files=(groovy-lsp/build/libs/groovy-lsp-*-all.jar)
           fi
-          ./gradlew "${args[@]}"
-          JAR_PATH=$(find groovy-lsp/build/libs -maxdepth 1 -name 'groovy-lsp-*-all.jar' -print -quit)
+          JAR_PATH=${jar_files[0]-}
           if [[ -z "$JAR_PATH" ]]; then
             echo "::error::Shadow JAR not found in groovy-lsp/build/libs"
             exit 1
